2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/l4/hurd/pt-thread-alloc.c (__pthread_thread_alloc):
	Update use of storage_alloc to be consistent with new API.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/l4/hurd/pt-sysdep.c (_pthread_init_routine): Change
	function signature to take a function pointer and an argument and
	to not return.
	(init_routine): Likewise.  Pass entry and argument to
	__pthread_create_internal.  Instead of returning, jump to the
	program counter and switch stacks.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/l4/hurd/ia32/pt-setup.c (_pthread_entry_point): New
	assembly function.
	(stack_setup): Take additional argument entry_point.  Push it on
	the stack.
	(__pthread_setup): Set thread->mcontext.pc to
	&_pthread_entry_point.  Pass ENTRY_POINT to stack_setup.

2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/hurd/pt-setspecific.c (pthread_setspecific): Update use
	of hurd_ihash_create to be consistent with API changes.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (AM_CPPFLAGS): Add -I$(LIBC)/include.

2008-01-17  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/l4/hurd/pt-block.c: New file.
	* sysdeps/l4/hurd/pt-wakeup.c: Likewise.

2008-01-01  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/generic/pt-mutex-timedlock.c
	(__pthread_mutex_timedlock_internal): Add additional asserts.
	[! NDEBUG]: Keep MUTEX->OWNER up to date.
	* sysdeps/generic/pt-mutex-trylock.c (__pthread_mutex_trylock):
	Add additional asserts.
	[! NDEBUG]: Keep MUTEX->OWNER up to date.
	* sysdeps/generic/pt-mutex-unlock.c (__pthread_mutex_unlock): Add
	additional asserts.
	[! NDEBUG]: Keep MUTEX->OWNER up to date.

2007-12-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (AM_CPPFLAGS): Add "-std=gnu99 -Wall -g -O3".

	* sysdeps/l4/pt-block.c (__pthread_block): Remove unused variable
	err.

	* pthread/pt-join.c (pthread_join): Cast argument to
	pthread_cleanup_push to avoid warning.
