@@ -1,3 +1,9 @@
+2008-02-16  Neal H. Walfield  <neal@gnu.org>
+
+	* sysdeps/l4/hurd/ia32/pt-setup.c (stack_setup): Add correct casts
+	to elide gcc warnings.
+	(__pthread_setup): Likewise.
+
 2008-02-13  Neal H. Walfield  <neal@gnu.org>
 
 	* sysdeps/l4/hurd/pt-thread-alloc.c (__pthread_thread_alloc):
